gnudatalanguage: updated to 0.9 epoch incremented
git-svn-id: https://svn.macports.org/repository/macports/trunk@71384 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/gnudatalanguage/Portfile
+++ b/dports/math/gnudatalanguage/Portfile
@@ -4,8 +4,8 @@
 PortSystem                  1.0
 
 name                        gnudatalanguage
-version                     0.9rc4
-revision                    4
+version                     0.9
+epoch                       1
 categories                  math science
 maintainers                 takeshi igf.fuw.edu.pl:slayoo
 license                     GPLv2
@@ -15,13 +15,18 @@ long_description \
     A free IDL (Interactive Data Language) compatible \
     incremental compiler (ie. runs IDL programs).
 homepage                    http://gnudatalanguage.sourceforge.net/
-master_sites                sourceforge
-distfiles                   gdl-${version}.tar.gz
+master_sites                sourceforge:gdl \
+                            ftp://ftp.soest.hawaii.edu/pwessel/gshhs:gshhs
+set gdlsrc          gdl-${version}.tar.gz
+set gshhssrc        gshhs_1.12_src.zip
+set gshhsdata       gshhs_2.1.0.zip
+distfiles           ${gdlsrc}:gdl
 worksrcdir                  gdl-${version}
 
-checksums                   md5     dcef0d75308a13856a799d12755c80a3 \
-                            sha1    ffd133b9bc213613c89952f341defb447a87bf1d \
-                            rmd160  504f072d4dbf30403a2e9e0ed18223537619f01a
+checksums           ${gdlsrc} \
+                    md5     dd357a8b2569629ba8d29078200d45e7 \
+                    sha1    93a71bad8ad0c16a6e79edaae0489c372f442bcf \
+                    rmd160  5d25e1b899a072fcd23aadd7fd1b701a26c4ba0f
 
 depends_lib                 port:zlib \
                             port:gsl \
@@ -40,14 +45,14 @@ depends_lib                 port:zlib \
                             port:fftw-3-single \
                             port:cmsvlib
 
-patch {
-   # both patches are included in the GDL CVS version - will not be needed for >0.9rc4
-   reinplace "s|lib_LIBRARIES|noinst_LIBRARIES|" ${worksrcpath}/src/antlr/Makefile.am
-   reinplace "s|GDLLexer lexer(istr, \"\")|GDLLexer lexer(istr, \"\", GDLParser::NONE)|" ${worksrcpath}/src/widget.cpp;
+post-patch {
    # add the CMSVLIB installation path
    reinplace "s|dicom\"|dicom:${prefix}/share/cmsvlib\"|" ${worksrcpath}/src/gdl.cpp
    # Avoid using heimdal's broken fnmatch.h
    reinplace "s|<\\(fnmatch\.h\\)>|\"/usr/include/\\1\"|" ${worksrcpath}/src/file.cpp
+   reinplace "s|/usr/X11R6/lib64|${prefix}/lib|" ${worksrcpath}/src/Makefile.am
+   reinplace "s| -L/usr/X11R6/lib||" ${worksrcpath}/src/Makefile.am
+   reinplace "s|\.\./gshhs|gshhs|" ${worksrcpath}/src/gshhs.cpp
 }
 
 pre-configure {
@@ -65,6 +70,7 @@ configure.args              --with-plplotdir=${prefix} \
                             --with-hdf5=${prefix} \
                             --with-grib=${prefix} \
                             --with-Magick=${prefix} \
+                            --without-wxWidgets \
                             --disable-dependency-tracking \
                             --x-includes=${prefix}/include \
                             --x-libraries=${prefix}/lib \
@@ -85,7 +91,7 @@ use_parallel_build          yes
 
 post-destroot {
    xinstall -m 755 -d ${destroot}${prefix}/share/doc/${name}
-   xinstall -m 644 -W ${worksrcpath} AUTHORS COPYING Doxyfile ChangeLog HACKING INSTALL NEWS MAP_INSTALL PYTHON.txt README README_GRIB TODO ${destroot}${prefix}/share/doc/${name}
+   xinstall -m 644 -W ${worksrcpath} AUTHORS COPYING Doxyfile ChangeLog HACKING NEWS MAP_INSTALL PYTHON.txt README TODO ${destroot}${prefix}/share/doc/${name}
    xinstall -m 755 -d ${destroot}${prefix}/share/${name}
    xinstall -m 755 -d ${destroot}${prefix}/share/${name}/py
    eval xinstall -m 644 [glob ${worksrcpath}/src/py/*.py] ${destroot}${prefix}/share/${name}/py
@@ -101,6 +107,7 @@ variant mpich description {build with support for MPICH (experimental)} {
 
 variant wxWidgets description {build with support for widgets (experimental, not functional yet)} {
     depends_lib-append      port:wxWidgets
+    configure.args-delete   --without-wxWidgets
     configure.args-append   --with-wxWidgets=${prefix} 
     # http://wiki.finkproject.org/index.php/Fink:Packaging:Preparing_for_10.5#OpenGL_Bug
     #configure.env-append    LDFLAGS=\"-Wl,-dylib_file,/System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGL.dylib:/System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGL.dylib\"
@@ -118,4 +125,32 @@ variant openmp description {enabling of the support for multi-threaded matrix op
     configure.args-append   --with-openmp=yes
     configure.compiler      macports-gcc-4.4
     depends_build-append    port:gcc44
+}
+
+variant gshhs description {build with support for GSHHS} {
+    distfiles-append        ${gshhssrc}:gshhs \
+                            ${gshhsdata}:gshhs
+    checksums-append \
+                    ${gshhssrc} \
+                    md5     1897e6f18e7149baecba93974c8a6044 \
+                    sha1    843be264c55dce8c1519b42a69a4173983c6f1cd \
+                    rmd160  d7a2e9d794cb1be5563f5e5b74e064a211eb3a3f \
+                    ${gshhsdata} \
+                    md5     30d336f86228e2e2861a2ba91efa0857 \
+                    sha1    fe14a1dcc7b863fb59ea00d9975b2499b669bd79 \
+                    rmd160  f4ecd162cd4e60f3b03d02d22ab143184d026f34
+    extract.only    ${gdlsrc}
+    post-extract {
+        system "cd ${workpath}; \
+                unzip ${distpath}/${gshhssrc} gshhs/gshhs.h; \
+                unzip ${distpath}/${gshhsdata}"
+    }
+    configure.args-append   --with-gshhs=${workpath}/gshhs
+    configure.cppflags-append   -I${workpath}/gshhs
+    post-destroot {
+        xinstall -d ${destroot}${prefix}/share/gnudatalanguage/gshhs
+        foreach f [glob ${workpath}/gshhs/*.b] {
+            xinstall -m 644 ${f} ${destroot}${prefix}/share/gnudatalanguage/gshhs
+        }
+    }
 }
