--- a/dports/java/android/Portfile
+++ b/dports/java/android/Portfile
@@ -8,7 +8,7 @@ name		    android
 version		    7
 revision	    0
 categories	    java devel emulators
-maintainers	    openmaintainer, krischik
+maintainers	    openmaintainer krischik
 platforms	    darwin
 description	    Android SDK
 long_description							\
@@ -24,13 +24,13 @@ master_sites	    http://dl.google.com/${name}:prog			\
 distfiles	    ${prog}:prog										\
 		    ${appbundles}:appbundles
 distname	    ${name}-sdk_r0${version}-mac_86
-worksrcdir	    ${name}-sdk-mac_86
+worksrcdir	    ${name}-sdk-mac_x86
 extract.only	    ${appbundles}
 
 checksums           ${prog}						\
-                    md5     c92abf66a82c7a3f2b8493ebe025dd22		\
-                    sha1    92c0974808a0cc340890dabc1fdff7b6459e8bba	\
-                    rmd160  f4c9c2c3db8f405621196435f7c2c67e685e4cf4	\
+		    md5     0f330ed3ebb36786faf6dc72b8acf819		\
+                    sha1    20f3b8806e2772e5ea774d54f6d6318f69c301a2	\
+                    rmd160  d47bd0f6f41cab947a6732339f1beff3afbf2532	\
                     ${appbundles}					\
                     md5     5aed877bfbd0777df0f9c5476897b2fb		\
                     sha1    ad5da2a7734e6ced420b3b395962bde8fb42036d	\
