ffmpeg-devel: update to svn 25102 swscale 32106, merge changes from ffmpeg.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71386 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/ffmpeg-devel/Portfile
+++ b/dports/multimedia/ffmpeg-devel/Portfile
@@ -6,8 +6,8 @@ PortGroup xcodeversion 1.0
 
 name            ffmpeg-devel
 conflicts       ffmpeg
-set svn_rev     24678
-set swscale_rev 31879
+set svn_rev     25102
+set swscale_rev 32106
 version         ${svn_rev}
 license         nonfree GPLv2.1+ LGPLv2.1+
 categories      multimedia
@@ -71,8 +71,6 @@ depends_lib     port:lame \
                 port:bzip2 \
                 port:zlib
 
-build.cmd       gmake
-
 
 pre-fetch {
     if {[file isdirectory ${distpath}/${svn_rev}]} {
@@ -129,6 +127,8 @@ if {$build_arch != ""} {
     configure.args-append --arch=${build_arch}
 }
 
+build.cmd       ${prefix}/bin/gmake
+
 test.run        yes
 
 #
@@ -162,6 +162,10 @@ platform powerpc {
     if {[exec sysctl -n hw.vectorunit] == 0} {
         configure.args-append --disable-altivec
     }
+}
+
+variant verbose_build description {Emit full build commands during build} {
+    patchfiles-append patch-common.mak.diff
 }
 
 variant no_mmx description {disable all x86 asm optimizations} {
