--- a/dports/lang/gdc/Portfile
+++ b/dports/lang/gdc/Portfile
@@ -41,6 +41,12 @@ post-patch {
 	reinplace "s|tjmp %%edx|tjmp *%%edx|" ${workpath}/gcc-${gcc_version}/gcc/config/i386/i386.c
 }
 
+# the generated compiler doesn't accept -arch
+configure.cc_archflags
+configure.cxx_archflags
+configure.objc_archflags
+configure.ld_archflags
+
 configure.cmd		${workpath}/gcc-${gcc_version}/configure
 configure.args		--enable-languages=d,c \
 			--bindir=${bindir} \
