py26-tvdb: lint
git-svn-id: https://svn.macports.org/repository/macports/trunk@71397 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-tvdb/Portfile
+++ b/dports/python/py26-tvdb/Portfile
@@ -9,6 +9,7 @@ version                 1.5
 platforms               darwin
 maintainers             jameskyle
 description             An easy to use API interface to TheTVDB.com
+long_description        ${description}
 
 homepage                http://github.com/dbr/tvdb_api
 master_sites            ${homepage}
