dos2unix: use configure.cc (#25120)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71398 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/dos2unix/Portfile
+++ b/dports/textproc/dos2unix/Portfile
@@ -21,7 +21,8 @@ depends_lib     port:gettext
 
 use_configure	no
 
-build.args      prefix=${prefix}
+build.args      prefix=${prefix} \
+                CC=${configure.cc}
 
 set CFLAGS_OS "${configure.cflags} ${configure.cppflags}"
 set LDFLAGS_EXTRA "${configure.ldflags} -lintl"
