pdflib: copy glibtool instead of linking, to avoid any possibility of writing to the installed copy
git-svn-id: https://svn.macports.org/repository/macports/trunk@71399 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/print/pdflib/Portfile
+++ b/dports/print/pdflib/Portfile
@@ -115,8 +115,7 @@ variant ruby description {Enable Ruby language binding} {
 if {[variant_isset universal]} {
     depends_build-append port:libtool
     post-configure {
-        file delete ${worksrcpath}/libtool
-        file link -s ${worksrcpath}/libtool ${prefix}/bin/glibtool
+        file copy -force ${prefix}/bin/glibtool ${worksrcpath}/libtool
     }
 }
 
