--- a/dports/python/py-openssl/Portfile
+++ b/dports/python/py-openssl/Portfile
@@ -7,7 +7,7 @@ name                    py-openssl
 version                 0.9
 revision        1
 categories              python devel security
-maintainers             raimue openmaintainer
+maintainers             nomaintainer
 platforms               darwin freebsd
 description             python wrapper around the OpenSSL library
 long_description        This python module is a rather thin wrapper around (a \
