gnome/gst-plugins-good upgraded version from 0.10.23 to 0.10.25, disabled (broken) gtk-doc via configure argument
git-svn-id: https://svn.macports.org/repository/macports/trunk@71405 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gst-plugins-good/Portfile
+++ b/dports/gnome/gst-plugins-good/Portfile
@@ -4,8 +4,7 @@
 PortSystem  1.0
 
 name                gst-plugins-good
-version             0.10.23
-revision            1
+version             0.10.25
 description         \
     A set of good-quality plug-ins for GStreamer under GStreamer's preferred \
     license, LGPL.
@@ -20,9 +19,9 @@ platforms           darwin
 homepage            http://gstreamer.freedesktop.org/modules/${name}.html
 master_sites        http://gstreamer.freedesktop.org/src/${name}/ gnome:sources/${name}/0.10/
 
-checksums           md5     9cddbb0e7e90677f0cc05c23feffef5c \
-                    sha1    d819a2690e5bfe83f1277c850b737a13f8f28c12 \
-                    rmd160  b19a61d796e0c384e074f61fc0515826fb6f6061
+checksums           md5     d734bc866788d1d6fc74c4ff1318926c \
+                    sha1    37339cc8a4e78bce253b9b85c7f25564ef7742f0 \
+                    rmd160  4fcc87426fd3d4f08dafbffed9efe0caddb7b0e1
 
 depends_lib	\
     port:gst-plugins-base \
@@ -50,7 +49,7 @@ pre-configure {
 }
 
 configure.cmd   ./autogen.sh
-configure.args   --disable-schemas-install --with-default-videosink=ximagesink
+configure.args-append   --disable-gtk-doc --disable-schemas-install --with-default-videosink=ximagesink
 
 post-activate {
         system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
