multiple ports, updated maintainers section to reflect alias change from rmsfisher@ to rmstonecipher@
git-svn-id: https://svn.macports.org/repository/macports/trunk@71406 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/libmodplug/Portfile
+++ b/dports/audio/libmodplug/Portfile
@@ -6,7 +6,7 @@ PortSystem      1.0
 name            libmodplug
 version         0.8.7
 categories      audio
-maintainers     rmsfisher openmaintainer
+maintainers     rmstonecipher openmaintainer
 platforms       darwin
 description     MOD audio library
 
