--- a/dports/audio/libmpdclient/Portfile
+++ b/dports/audio/libmpdclient/Portfile
@@ -6,7 +6,7 @@ PortSystem          1.0
 name                libmpdclient
 version             2.3
 categories          audio
-maintainers         rmsfisher openmaintainer
+maintainers         rmstonecipher openmaintainer
 description         libmpdclient is a stable, documented, asynchronous API library for interfacing MPD in the C, C++ & Objective C languages.
 long_description    ${description}
 homepage            http://mpd.wikia.com/wiki/ClientLib:libmpdclient
