--- a/dports/audio/ncmpcpp/Portfile
+++ b/dports/audio/ncmpcpp/Portfile
@@ -6,7 +6,7 @@ PortSystem          1.0
 name                ncmpcpp
 version             0.5.5
 categories          audio
-maintainers         rmsfisher openmaintainer
+maintainers         rmstonecipher openmaintainer
 description         an ncurses mpd client inspired by ncmpc
 long_description    Ncmpcpp has UI very similar to ncmpc's one, but it provides new useful \
                     features such as support for regular expressions in search engine, \
