--- a/dports/audio/taglib/Portfile
+++ b/dports/audio/taglib/Portfile
@@ -7,7 +7,7 @@ PortGroup  cmake  1.0
 name             taglib
 version          1.6.3
 categories       audio
-maintainers      rmsfisher openmaintainer
+maintainers      rmstonecipher openmaintainer
 description      TagLib Audio Meta-Data Library
 long_description \
     TagLib is a library for reading and editing the meta-data of \
