--- a/dports/devel/orc/Portfile
+++ b/dports/devel/orc/Portfile
@@ -7,7 +7,7 @@ name                orc
 version             0.4.9
 description         Orc - The Oil Runtime Compiler
 long_description    Orc is a library and set of tools for compiling and executing very simple programs that operate on arrays of data.
-maintainers         rmsfisher openmaintainer
+maintainers         rmstonecipher openmaintainer
 categories          devel
 platforms           darwin
 homepage            http://code.entropywave.com/projects/orc/
