--- a/dports/gnome/gnonlin/Portfile
+++ b/dports/gnome/gnonlin/Portfile
@@ -7,7 +7,7 @@ name                gnonlin
 version             0.10.16
 description         A set of non-linear editing plugins for GStreamer.
 long_description    GNonLin contains a set of plug-ins for GStreamer to ease the creation of multimedia editors, or any other application where a timeline-oriented use of GStreamer makes sense.
-maintainers         rmsfisher openmaintainer
+maintainers         rmstonecipher openmaintainer
 categories          gnome
 platforms           darwin
 homepage            http://gstreamer.freedesktop.org/modules/gnonlin.html
