--- a/dports/gnome/gst-plugins-bad/Portfile
+++ b/dports/gnome/gst-plugins-bad/Portfile
@@ -12,7 +12,7 @@ long_description    \
     something - be it a good code review, some documentation, a set of tests, a \
     real live maintainer, or some actual wide use.
 license             GPL LGPL
-maintainers         rmsfisher openmaintainer
+maintainers         rmstonecipher openmaintainer
 categories          gnome
 platforms           darwin
 homepage            http://www.gnome.org/
