--- a/dports/gnome/gst-plugins-base/Portfile
+++ b/dports/gnome/gst-plugins-base/Portfile
@@ -8,7 +8,7 @@ version             0.10.30
 revision            2
 description         This is gst-plugins, a set of plug-ins for GStreamer.
 long_description    ${description}
-maintainers         rmsfisher openmaintainer
+maintainers         rmstonecipher openmaintainer
 categories          gnome
 platforms           darwin
 homepage            http://gstreamer.freedesktop.org/
