--- a/dports/gnome/gst-plugins-good/Portfile
+++ b/dports/gnome/gst-plugins-good/Portfile
@@ -13,7 +13,7 @@ long_description    \
     consider to have good quality code, correct functionality, and their \
     preferred license (LGPL for the plug-in code, LGPL or LGPL-compatible for \
     the supporting library). 
-maintainers         rmsfisher openmaintainer
+maintainers         rmstonecipher openmaintainer
 categories          gnome
 platforms           darwin
 homepage            http://gstreamer.freedesktop.org/modules/${name}.html
