--- a/dports/gnome/gst-plugins-ugly/Portfile
+++ b/dports/gnome/gst-plugins-ugly/Portfile
@@ -13,7 +13,7 @@ long_description    \
     correct functionality, but distributing them might pose problems. The \
     license on either the plug-ins or the supporting libraries might not be how \
     we'd like. The code might be widely known to present patent problems. 
-maintainers         rmsfisher openmaintainer
+maintainers         rmstonecipher openmaintainer
 categories          gnome
 platforms           darwin
 homepage            http://gstreamer.freedesktop.org/modules/${name}.html
