--- a/dports/gnome/gstreamer/Portfile
+++ b/dports/gnome/gstreamer/Portfile
@@ -10,7 +10,7 @@ description \
 long_description \
     GStreamer is the core library. It contains the headers, core library files, \
     and core elements.
-maintainers	rmsfisher openmaintainer
+maintainers	rmstonecipher openmaintainer
 categories	gnome
 platforms	darwin
 homepage	http://gstreamer.freedesktop.org/
