--- a/dports/python/python-musicbrainz2/Portfile
+++ b/dports/python/python-musicbrainz2/Portfile
@@ -7,7 +7,7 @@ PortGroup           python26 1.0
 name                python-musicbrainz2
 version             0.7.2
 categories          python net audio
-maintainers         rmsfisher openmaintainer
+maintainers         rmstonecipher openmaintainer
 platforms           darwin
 description         python-based library to access the MusicBrainz Database
 
