--- a/dports/python/quodlibet/Portfile
+++ b/dports/python/quodlibet/Portfile
@@ -8,7 +8,7 @@ name                quodlibet
 version             2.2.1
 revision            2
 categories-append   audio gnome
-maintainers         elelay rmsfisher openmaintainer
+maintainers         elelay rmstonecipher openmaintainer
 platforms           darwin
 description         audio library manager and player for GTK+
 
