--- a/dports/audio/mpd/Portfile
+++ b/dports/audio/mpd/Portfile
@@ -6,7 +6,7 @@ PortSystem          1.0
 name                mpd
 version             0.15.12
 categories          audio
-maintainers         milosh rmsfisher openmaintainer
+maintainers         milosh rmstonecipher openmaintainer
 description         Music Player Daemon
 long_description    Music Player Daemon (MPD) allows remote access for playing music \
 	(MP3, Ogg Vorbis, FLAC, AAC, Mod, and wave files) and managing \
