--- a/dports/audio/ncmpc/Portfile
+++ b/dports/audio/ncmpc/Portfile
@@ -6,7 +6,7 @@ PortSystem          1.0
 name                ncmpc
 version             0.17
 categories          audio
-maintainers         gmail.com:phirince rmsfisher
+maintainers         gmail.com:phirince rmstonecipher
 description         curses Music Player Daemon (MPD) client
 long_description    ncmpc is  a client for MPD, the Music Player Daemon.
 homepage            http://mpd.wikia.com/wiki/Client:Ncmpc
