--- a/dports/audio/vorbis-tools/Portfile
+++ b/dports/audio/vorbis-tools/Portfile
@@ -8,7 +8,7 @@ version             1.4.0
 revision            1
 categories          audio
 platforms           darwin
-maintainers         rmsfisher openmaintainer
+maintainers         rmstonecipher openmaintainer
 
 description         The Ogg Vorbis CODEC tools
 long_description \
