--- a/dports/audio/wavpack/Portfile
+++ b/dports/audio/wavpack/Portfile
@@ -6,7 +6,7 @@ PortSystem 1.0
 name            wavpack
 version         4.60.1
 categories      audio
-maintainers     rmsfisher openmaintainer
+maintainers     rmstonecipher openmaintainer
 description     Hybrid lossless audio compression
 long_description        WavPack is a completely open audio compression format \
                         providing lossless, high-quality lossy, and a unique \
