--- a/dports/gnome/gobject-introspection/Portfile
+++ b/dports/gnome/gobject-introspection/Portfile
@@ -8,7 +8,7 @@ version             0.9.3
 set branch          [join [lrange [split ${version} .] 0 1] .]
 categories          gnome
 platforms           darwin
-maintainers         rmsfisher openmaintainer
+maintainers         rmstonecipher openmaintainer
 description         GObject Introspection
 
 long_description    Gobject Introspection acts as a bridge between low-level C+GObject code and \
