--- a/dports/kde/polkit-qt/Portfile
+++ b/dports/kde/polkit-qt/Portfile
@@ -8,7 +8,7 @@ name                polkit-qt
 version             0.9.3
 revision            1
 categories          kde kde4 security
-maintainers         rmsfisher openmaintainer
+maintainers         rmstonecipher openmaintainer
 description         Qt PolicyKit wrapper
 long_description    ${description}
 platforms           darwin
