--- a/dports/multimedia/gtkpod/Portfile
+++ b/dports/multimedia/gtkpod/Portfile
@@ -8,7 +8,7 @@ version             1.0.0
 revision            1
 categories          multimedia gnome
 platforms           darwin
-maintainers         rmsfisher openmaintainer
+maintainers         rmstonecipher openmaintainer
 description         gtkpod is a platform independent Graphical User Interface for Apple's iPod using GTK2.gpod is a library to access the contents of an iPod.
 long_description    ${description} It supports the first to fifth Generation including the iPod mini, iPod Photo, iPod Shuffle, iPod nano, and iPod Video.
 homepage            http://www.gtkpod.org/
