--- a/dports/multimedia/libgpod/Portfile
+++ b/dports/multimedia/libgpod/Portfile
@@ -7,7 +7,7 @@ version             0.7.2
 revision            1
 categories          multimedia
 platforms           darwin
-maintainers         rmsfisher openmaintainer
+maintainers         rmstonecipher openmaintainer
 description         libgpod is a library to access the contents of an iPod.
 long_description    ${description} This library is based on code used in the \
                     gtkpod project. Starting with V0.96.CVS gtkpod depends \
