--- a/dports/multimedia/libtheora/Portfile
+++ b/dports/multimedia/libtheora/Portfile
@@ -8,7 +8,7 @@ epoch           1
 version         1.1.1
 categories      multimedia
 platforms       darwin
-maintainers     rmsfisher openmaintainer
+maintainers     rmstonecipher openmaintainer
 description     Xiph.org Foundation's open video codec
 
 long_description \
