--- a/dports/python/py25-gst-python/Portfile
+++ b/dports/python/py25-gst-python/Portfile
@@ -6,7 +6,7 @@ PortSystem          1.0
 name                py25-gst-python
 version             0.10.18
 categories          python gnome multimedia
-maintainers         rmsfisher openmaintainer
+maintainers         rmstonecipher openmaintainer
 description         GStreamer python bindings
 set my_name         gst-python
 long_description    ${my_name} allows python programs built with the gnome toolkit to use gstreamer for multimedia input/output
