--- a/dports/textproc/libplist/Portfile
+++ b/dports/textproc/libplist/Portfile
@@ -7,7 +7,7 @@ PortGroup           cmake 1.0
 name                libplist
 version             1.3
 categories          textproc multimedia
-maintainers         rmsfisher openmaintainer
+maintainers         rmstonecipher openmaintainer
 description         Library for working with Apple Binary and XML Property Lists
 long_description    ${description}
 platforms           darwin
