libgeotiff: updated to 1.3.0. moved csv files to /share/
git-svn-id: https://svn.macports.org/repository/macports/trunk@71408 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/libgeotiff/Portfile
+++ b/dports/graphics/libgeotiff/Portfile
@@ -1,10 +1,10 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem              1.0
 
 name                    libgeotiff
-version                 1.2.5
-revision                3
+version                 1.3.0
 categories              graphics
 platforms               darwin
 maintainers             nomaintainer
@@ -16,11 +16,15 @@ description             Library and tools for dealing with GeoTIFF
 long_description        This software provides support for the Tag Image File \
                         Format (TIFF) Geo extensions.
 
-checksums               md5     000f247a88510f1b38d4b314d1e47048 \
-                        sha1    38b10070374636fedfdde328ff1c9f3c6e8e581f \
-                        rmd160  d82d8c705979feb51c367259e1659ff3325320f2
+checksums           md5     6ac3c22e44711e9a3add9044e40b9527 \
+                    sha1    b8cde5014cf82fe4683fa35fc81a5ea8d64b940f \
+                    rmd160  845a2bba9b8b6204d86895f7580e3ae9f3b8ed67
 
 depends_lib             port:tiff port:proj port:zlib port:jpeg
+
+post-patch {
+    reinplace "s|epsg_csv|${name}/epsg_csv|" ${worksrcpath}/Makefile.in
+}
 
 configure.args          --with-zip=${prefix} \
                         --with-jpeg=${prefix} \
@@ -31,16 +35,6 @@ if {![variant_isset universal]} {
 }
 
 use_parallel_build      no
-
-post-destroot {
-    move ${destroot}${prefix}/lib/libgeotiff.dylib.${version} ${destroot}${prefix}/lib/libgeotiff.${version}.dylib
-    system "install_name_tool -id ${prefix}/lib/libgeotiff.${version}.dylib ${destroot}${prefix}/lib/libgeotiff.${version}.dylib"
-    foreach suf ".[join [lrange [split ${version} .] 0 1] .] .[lindex [split ${version} .] 0] {}" {
-        delete ${destroot}${prefix}/lib/libgeotiff.dylib${suf}
-        ln -s libgeotiff.${version}.dylib ${destroot}${prefix}/lib/libgeotiff${suf}.dylib
-    }
-    system "find ${destroot}${prefix}/bin -type f -exec install_name_tool -change libgeotiff.dylib.${version} ${prefix}/lib/libgeotiff.${version}.dylib {} \\;"
-}
 
 livecheck.type          regex
 livecheck.url           [lindex ${master_sites} 0]
