--- a/dports/science/grads2/Portfile
+++ b/dports/science/grads2/Portfile
@@ -5,6 +5,7 @@ PortSystem              1.0
 
 name                    grads2
 version                 2.0.a7.oga.3
+revision                1
 platforms               darwin
 maintainers             takeshi
 categories              science
