libhsplasma: add debug variant
git-svn-id: https://svn.macports.org/repository/macports/trunk@71410 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libhsplasma/Portfile
+++ b/dports/devel/libhsplasma/Portfile
@@ -56,6 +56,10 @@ post-destroot {
     eval reinplace "s|${destroot}||g" [glob ${destroot}${prefix}/lib/pkgconfig/*.pc]
 }
 
+variant debug description {Build with debugging symbols} {
+    configure.cflags-append -g
+}
+
 livecheck.type              regex
 livecheck.url               ${hg.url}
 livecheck.version           [lindex [split ${version} -] 1]
