--- a/dports/lang/g95/Portfile
+++ b/dports/lang/g95/Portfile
@@ -59,6 +59,7 @@ patchfiles      patch-Makefile.in.diff \
                 patch-darwin-fallback.c.diff
 
 universal_variant no
+use_parallel_build  no
 
 extract.only    ${dg95}
 
