lang/yasm upgraded version from 1.0.0 to 1.1.0 per ticket #26280 (maintainer timeout), fixed broken livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@71413 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/yasm/Portfile
+++ b/dports/lang/yasm/Portfile
@@ -3,7 +3,7 @@
 PortSystem	1.0
 
 name		yasm
-version		1.0.0
+version		1.1.0
 categories	lang
 maintainers	acho
 description	yasm - a modular bsd reimplementation of NASM
@@ -19,5 +19,9 @@ platforms	darwin
 homepage	http://www.tortall.net/projects/yasm/
 master_sites	http://www.tortall.net/projects/yasm/releases/
 
-checksums	${distname}${extract.suffix} \
-		    sha1 62830302138bae74572f320cc9672efb5b5724a2
+checksums           md5     8392e5f2235c2c2a981e1a633f2698cb \
+                    sha1    8b252d2a50f6d0d8fe13997183596c3cd7589db9 \
+                    rmd160  93e9ee40319ca02a3a8fff7f85af216d37fb1d06
+
+livecheck.url   ${master_sites}
+livecheck.regex "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
