lang/yasm redundant library dependency removed per ticket #26280 (maintainer timeout)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71414 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/yasm/Portfile
+++ b/dports/lang/yasm/Portfile
@@ -12,7 +12,7 @@ long_description A modular x86/amd64 assembler supporting NASM and GAS asm \
 		under the 3-clause BSD license except the nasm preprocessor \
 		which is LGPL.
 
-depends_lib	port:gettext port:libiconv
+depends_lib	port:gettext
 
 platforms	darwin
 
