devel/nspr fixed broken livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@71415 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/nspr/Portfile
+++ b/dports/devel/nspr/Portfile
@@ -63,5 +63,6 @@ post-destroot {
 }
 
 livecheck.type  regex
-livecheck.url   ${homepage}/release-notes/
-livecheck.regex {NSPR (\d+(?:\.\d+)*)<}
+#livecheck.url   [lindex ${master_sites} 0]
+livecheck.url	http://ftp.mozilla.org/pub/mozilla.org/nspr/releases/
+livecheck.regex "v(\\d+(?:\\.\\d+)*)"
