--- a/dports/graphics/wxWidgets-devel/Portfile
+++ b/dports/graphics/wxWidgets-devel/Portfile
@@ -3,8 +3,7 @@
 PortSystem 1.0
 
 name			wxWidgets-devel
-version			2.9.0
-revision        2
+version			2.9.1
 categories		graphics devel
 platforms		darwin
 maintainers		jwa mww
@@ -27,11 +26,11 @@ distfiles		${distname}-${version}${extract.suffix}
 dist_subdir		${distname}/${version}
 
 checksums		${distname}-${version}${extract.suffix} \
-    md5     09058928eeb72853142c062bdec056ce \
+    md5     81c20d7b2ba31becb18e467dbe09be8f \
     ${distname}-${version}${extract.suffix} \
-    sha1    0e14fa85637d07a93a22d4d6a01871cc0e9e31b7 \
+    sha1    3ffe0614acce46448f5c14942176fb2daa6efd00 \
     ${distname}-${version}${extract.suffix} \
-    rmd160  72d91bfa5fdd2ffafcce50d4440d8fba37ab8872
+    rmd160  106f5b0238e31e12bbede7f1c2cf0e0134076e29
 
 depends_lib		port:jpeg \
     port:tiff \
@@ -72,7 +71,7 @@ if {$build_arch == "x86_64" || $build_arch == "ppc64"} {
     # default carbon won't work on 64-bit
     configure.args-delete --with-mac
     configure.args-append --with-osx_cocoa
-    patchfiles-append     patch-textctrl.diff
+#    patchfiles-append     patch-textctrl.diff
 }
 
 set installtype		release
@@ -97,11 +96,11 @@ post-destroot {
 #	readme-gtk.txt readme-mac.txt \
 #	readme-mgl.txt readme-motif.txt readme-x11.txt \
 #	${destroot}${prefix}/share/doc/${name}
-    if {$build_arch == "x86_64" || $build_arch == "ppc64"} {
-        reinplace "s|-L${build.dir}/lib||" ${destroot}${prefix}/lib/${sub}/wx/config/osx_cocoa-unicode-${installtype}-2.9
-    } else {
-        reinplace "s|-L${build.dir}/lib||" ${destroot}${prefix}/lib/${sub}/wx/config/osx_carbon-unicode-${installtype}-2.9
-    }
+#    if {$build_arch == "x86_64" || $build_arch == "ppc64"} {
+#        reinplace "s|-L${build.dir}/lib||" ${destroot}${prefix}/lib/${sub}/wx/config/osx_cocoa-unicode-${installtype}-2.9
+#    } else {
+#        reinplace "s|-L${build.dir}/lib||" ${destroot}${prefix}/lib/${sub}/wx/config/osx_carbon-unicode-${installtype}-2.9
+#    }
 }
 
 variant nonmonolithic description {build libraries separately} {
@@ -115,4 +114,4 @@ variant debug description {add debug info to libraries} {
 
 livecheck.type		regex
 livecheck.url		http://biolpc22.york.ac.uk/pub/
-livecheck.regex		(2.\[0-9\]+.\[0-9\]+-rc\[0-9\])/
+livecheck.regex		(2.\[0-9\]+.\[0-9a-z.-\]+)/
