--- a/dports/x11/xorg-libxcb/Portfile
+++ b/dports/x11/xorg-libxcb/Portfile
@@ -26,6 +26,36 @@ depends_lib	port:xorg-libXau \
                 port:xorg-xcb-proto \
                 port:xorg-libpthread-stubs
 
+variant python25 conflicts python26 python27 python31 python32 description {Use python 2.5} {
+    depends_run-append      port:python25
+    configure.python        ${prefix}/bin/python2.5
+}
+
+variant python26 conflicts python25 python27 python31 python32 description {Use python 2.6} {
+    depends_run-append      port:python26
+    configure.python        ${prefix}/bin/python2.6
+}
+
+variant python27 conflicts python25 python26 python31 python32 description {Use python 2.7} {
+    depends_run-append      port:python27
+    configure.python        ${prefix}/bin/python2.7
+}
+
+variant python31 conflicts python25 python26 python27 python32 description {Use python 3.1} {
+    depends_run-append      port:python31
+    configure.python        ${prefix}/bin/python3.1
+}
+
+variant python32 conflicts python25 python26 python27 python31 description {Use python 3.2} {
+    depends_run-append      port:python32
+    configure.python        ${prefix}/bin/python3.2
+}
+
+# Default to 2.6 since 2.5 fails universal on Leopard... Ticket #17501
+if {![variant_isset python25] && ![variant_isset python27] && ![variant_isset python31] && ![variant_isset python32]} {
+    default_variants +python26
+}
+
 livecheck.type  regex
 livecheck.url   ${master_sites}?C=M&O=D
 livecheck.regex libxcb-(\\d+(?:\\.\\d+)*)
