slv2: update dependencies, delete outdated patchfile.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71419 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/slv2/Portfile
+++ b/dports/audio/slv2/Portfile
@@ -25,13 +25,9 @@ checksums       md5     b8e8e0e82dd04324fcd533e8acd1ce85 \
 
 depends_build   port:pkgconfig
 
-depends_lib     port:rasqal \
-                port:raptor \
-                port:redland \
+depends_lib     port:redland \
                 port:jack \
                 port:lv2core
-
-patchfiles      patch-src-plugin.c.diff
 
 configure.cmd   ./waf configure
 
