texlive-fontutils: patch epstopdf to fix reading from stdin (#26380)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71420 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/tex/texlive-fontutils/Portfile
+++ b/dports/tex/texlive-fontutils/Portfile
@@ -6,7 +6,7 @@ PortGroup           texlive 1.0
 
 name                texlive-fontutils
 version             15606
-revision            2
+revision            3
 
 categories          tex
 maintainers         dports
@@ -18,6 +18,8 @@ checksums           md5     472326b366b6af75534376abf2493ed6 \
                     rmd160  1d5903c46b43ae523ccdec69258ffe6e21e0e4c7
 
 depends_lib         port:texlive-basic
+
+patchfiles          patch-epstopdf-stdin.diff
 
 texlive.exclude     texmf/doc/man/man1/afm2pl.1 \
                     texmf/doc/man/man1/bbox.1 \
