pspp-devel: update to g805e7e
git-svn-id: https://svn.macports.org/repository/macports/trunk@71424 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/pspp-devel/Portfile
+++ b/dports/math/pspp-devel/Portfile
@@ -4,10 +4,10 @@
 PortSystem          1.0
 
 name                pspp-devel
-set buildstamp      20100820040508
-set buildhash       g7803d3
+set buildstamp      20100907040503
+set buildhash       g805e7e
 version             0.7.5
-revision            14
+revision            15
 categories          math
 license             GPLv3+
 maintainers         snc
@@ -25,7 +25,6 @@ platforms           darwin
 master_sites        http://pspp.benpfaff.org/~blp/pspp-master/${buildstamp}
 distname            pspp-${version}-${buildhash}
 
-depends_build       port:pkgconfig
 depends_lib		    port:gsl \
                     port:libiconv \
                     port:zlib \
@@ -37,8 +36,8 @@ depends_lib		    port:gsl \
                     port:libglade2 \
                     port:libtool
 
-checksums           sha1    b1df3ceeec57443f55519586d0d49a467a46dad4 \
-                    rmd160  0ff6a4aab2e83dfa5be54765656d0d6f937e6970
+checksums           sha1    ba19209c823a21963e0ac1e34cecdffa31206d57 \
+                    rmd160  00264323a7f09b5b23f18f8f0bc98bccfb01fdff
 
 #configure.optflags  -O0
 #configure.cflags-append -g
