slv2: work around waf build problems for now     * ensure library search paths from dependent library redlands pkgconfig file       are carried forward into the slv2 pkgconfig file     * fixup library install names in library and binaries to refer to the installed       library path rather than the build path.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71429 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/slv2/Portfile
+++ b/dports/audio/slv2/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name            slv2
 version         0.6.6
+revision        1
 maintainers     devans
 categories      audio
 platforms       darwin
@@ -29,6 +30,11 @@ depends_lib     port:redland \
                 port:jack \
                 port:lv2core
 
+post-patch {
+        set redland_libs [exec ${prefix}/bin/pkg-config --libs redland]
+        reinplace "s|@REDLAND_LIBS@|${redland_libs}|" ${worksrcpath}/slv2.pc.in
+}
+
 configure.cmd   ./waf configure
 
 build.cmd       ./waf
@@ -36,6 +42,15 @@ build.target    build
 
 destroot.cmd    ./waf
 destroot.destdir --destdir=${destroot}
+
+post-destroot {
+        set bindir ${destroot}${prefix}/bin
+        set libdir ${destroot}${prefix}/lib
+        system "install_name_tool -change default/libslv2.dylib ${prefix}/lib/libslv2.dylib ${libdir}/libslv2.dylib"
+        foreach util [glob ${bindir}/*] {
+            system "install_name_tool -change default/libslv2.dylib ${prefix}/lib/libslv2.dylib ${util}"
+        }
+}
 
 #
 # lv2core is not universal
