--- a/dports/audio/ardour2/Portfile
+++ b/dports/audio/ardour2/Portfile
@@ -71,7 +71,7 @@ destroot.cmd            scons
 # Fix gettext bug on Leopard (and later?); see #19886
 destroot.env-append     VERSION_CONTROL=off
 
-variant lv2 description {Add support for LV2 plugins (currently broken)} {
+variant lv2 description {Add support for LV2 plugins} {
         build.args-delete LV2=0
         build.args-append LV2=1
         depends_lib-append port:slv2
