unbound: update to 1.4.6. drop autoreconf, #26451
git-svn-id: https://svn.macports.org/repository/macports/trunk@71433 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/unbound/Portfile
+++ b/dports/net/unbound/Portfile
@@ -4,8 +4,7 @@
 PortSystem          1.0
 
 name                unbound
-version             1.4.5
-revision        1
+version             1.4.6
 categories          net
 conflicts           ldns
 license             BSD
@@ -31,11 +30,8 @@ long_description    Unbound is a validating, recursive, and caching DNS \
 
 master_sites        http://unbound.net/downloads/
 
-use_autoreconf      yes
-
-checksums           md5     f1f6c97b90b15ca503a80b888c311d6c \
-                    sha1    c1f227b95448cdfd0006d6d00b3d4354500d7564 \
-                    rmd160  908d80acf0dfe4592922988e5ca73bdbab8d26a9
+checksums           md5     2cdcfe0ca45373c6b22e274560ae9943 \
+                    sha1    b0d7c58f173c5c80cc81345f6766555f96bde20d
 
 configure.args-append --with-pidfile=${prefix}/var/run/${name}/${name}.pid
 
