ffmpeg, ffmpeg-devel: per suggestion from ryandesign, remove +verbose_build variant and just build in verbose mode all the time.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71434 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/ffmpeg-devel/Portfile
+++ b/dports/multimedia/ffmpeg-devel/Portfile
@@ -128,6 +128,7 @@ if {$build_arch != ""} {
 }
 
 build.cmd       ${prefix}/bin/gmake
+build.env-append V=1
 
 test.run        yes
 
@@ -162,10 +163,6 @@ platform powerpc {
     if {[exec sysctl -n hw.vectorunit] == 0} {
         configure.args-append --disable-altivec
     }
-}
-
-variant verbose_build description {Emit full build commands during build} {
-    patchfiles-append patch-common.mak.diff
 }
 
 variant no_mmx description {disable all x86 asm optimizations} {
