--- a/dports/multimedia/ffmpeg/Portfile
+++ b/dports/multimedia/ffmpeg/Portfile
@@ -89,6 +89,7 @@ if {${build.jobs} < 2} {
 }
 
 build.cmd       ${prefix}/bin/gmake
+build.env-append V=1
 
 #
 # enable auto configure of mmx and related Intel optimizations by default
@@ -130,10 +131,6 @@ test.run        yes
 #
 
 universal_variant no
-
-variant verbose_build description {Emit full build commands during build} {
-    patchfiles-append patch-common.mak.diff
-}
 
 post-destroot {
     file mkdir ${destroot}${prefix}/share/doc/${name}
