--- a/dports/databases/libgda4/Portfile
+++ b/dports/databases/libgda4/Portfile
@@ -6,7 +6,7 @@ PortSystem 1.0
 name		libgda4
 conflicts       libgda3
 set gname       libgda
-version		4.1.8
+version		4.1.10
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	GDA provides uniform access to diffent kinds of data sources.
 long_description	\
@@ -21,27 +21,23 @@ distname	libgda-${version}
 master_sites    gnome:sources/${gname}/${branch}/
 use_bzip2	yes
 
-checksums           md5     985c30b4bd957dcc198c776881a481fc \
-                    sha1    aa68db21fbe0fc4e5175994d41bc981597a4d3cf \
-                    rmd160  4ce81054c2e40ddc37fd0eb778fbe961ed064946
+checksums       md5     a809140426fad06c92202ecc8741ae32 \
+                sha1    78f7018734905ba1aa83b4b8add9184eed369fa0 \
+                rmd160  979abd512ff437eded06d770568ca7d36d7c4e5d
 
 patchfiles      patch-configure.ac.diff
 
 depends_build	port:pkgconfig \
-                port:flex \
-	        port:m4 \
 	        port:intltool \
-                port:p5-xml-parser \
-	        port:gnome-doc-utils
+	        port:gnome-doc-utils \
+                port:autoconf
 
-depends_lib	port:gettext \
-	        port:libiconv \
-	        port:libxml2 \
-	        port:ncurses \
-	        port:readline \
-	        port:zlib \
-	        port:gnome-vfs \
-                port:sqlite3 \
+depends_lib	port:sqlite3 \
+	        port:graphviz \
+                port:gtksourceview2 \
+                port:goocanvas \
+                port:libunique \
+                port:iso-codes \
                 port:libsoup
 
 #
