mercury: remove dependency on deleted port gcc34 (#26455)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71437 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/mercury/Portfile
+++ b/dports/lang/mercury/Portfile
@@ -41,9 +41,14 @@ post-patch	{ reinplace \
 		}
 
 depends_lib	port:readline
-depends_build	port:gcc34
 
-configure.cc	gcc-dp-3.4
+platform darwin 8 {
+    depends_build-append port:gcc44
+    configure.compiler macports-gcc-4.4
+}
+platform darwin 9 {
+    configure.compiler gcc-4.2
+}
 
 configure.args	--mandir=${prefix}/share/man \
 		--infodir=${prefix}/share/info
