mesa: Add a check and workaround for #25677
git-svn-id: https://svn.macports.org/repository/macports/trunk@71439 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/mesa/Portfile
+++ b/dports/x11/mesa/Portfile
@@ -106,6 +106,14 @@ post-patch {
 	reinplace "s:LINK=\"cc\":LINK=\"${configure.cc}\":"    ${worksrcpath}/bin/mklib
 }
 
+pre-configure {
+	if { ![file exists /usr/lib/libXplugin.dylib] } {
+		ui_error "Detected a problem with your development environment.  Please work around it by executing:"
+		ui_error "sudo ln -s libXplugin.1.dylib /usr/lib/libXplugin.dylib"
+		return -code error "missing libXplugin.dylib"
+	}
+}
+
 post-destroot {
 	# http://trac.macports.org/ticket/24337
 	# http://trac.macports.org/ticket/24349
