libgda4: remove redundant dependency on autoconf and change graphviz dependency to path to allow graphviz-devel per ryandesign.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71440 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/libgda4/Portfile
+++ b/dports/databases/libgda4/Portfile
@@ -29,11 +29,10 @@ patchfiles      patch-configure.ac.diff
 
 depends_build	port:pkgconfig \
 	        port:intltool \
-	        port:gnome-doc-utils \
-                port:autoconf
+	        port:gnome-doc-utils
 
 depends_lib	port:sqlite3 \
-	        port:graphviz \
+	        path:bin/dot:graphviz \
                 port:gtksourceview2 \
                 port:goocanvas \
                 port:libunique \
