gnome-devel-docs: update to version 2.30.1.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71441 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gnome-devel-docs/Portfile
+++ b/dports/gnome/gnome-devel-docs/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name		gnome-devel-docs
-version		2.26.2
+version		2.30.1
 set branch	[join [lrange [split ${version} .] 0 1] .]
 description	The GNOME Developer Documentation Package
 long_description        This is the GNOME Developer Documentation package including the following: \
@@ -22,18 +22,16 @@ platforms	darwin
 homepage	http://www.gnome.org/
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums       md5     e07e79a0cf5c55c7a30ef6929aed7f1c \
-                sha1    fbfd806995d654c0d1ad66af43f3b8d2caa1eb67 \
-                rmd160  268a3bbfc4e8b07c5fcd7b3aea4dce9ef68baf03
+checksums       md5     6af984290595176fcd6f0717320b7643 \
+                sha1    a89f0d3655d63e8be360eb75297d9ee19b50ee15 \
+                rmd160  33dd813bc23bff8a74b9c864d98e7b4725e872ec
 
 depends_build   port:pkgconfig \
-                port:xmlto \
                 port:gnome-doc-utils
 
 use_bzip2 	yes
 
-configure.args  --mandir=${prefix}/share/man \
-                --disable-scrollkeeper
+configure.args  --disable-scrollkeeper
 
 post-activate {
    system "scrollkeeper-update"
