sounddecompress: avoid too many open files issue when running with libhsplasma 627:bbc03b474261 or later
git-svn-id: https://svn.macports.org/repository/macports/trunk@71443 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/sounddecompress/Portfile
+++ b/dports/games/sounddecompress/Portfile
@@ -5,6 +5,7 @@ PortSystem                  1.0
 
 name                        sounddecompress
 version                     1.11
+revision                    1
 platforms                   darwin
 categories                  games audio sysutils
 maintainers                 ryandesign
@@ -44,6 +45,10 @@ depends_run                 port:python26
 
 extract.mkdir               yes
 
+post-extract {
+    copy ${filespath}/sounddecompress.py.in ${workpath}/sounddecompress.py
+}
+
 patchfiles                  patch-wxSoundDecompress.py.diff
 
 post-patch {
@@ -56,10 +61,14 @@ post-patch {
 
 use_configure               no
 
-build                       {}
+build {
+    reinplace "s|@PREFIX@|${prefix}|g" ${workpath}/sounddecompress.py
+}
 
 destroot {
-    xinstall ${worksrcpath}/sounddecompress.py ${destroot}${prefix}/bin
+    xinstall ${workpath}/sounddecompress.py ${destroot}${prefix}/bin
+    xinstall -d ${destroot}${prefix}/libexec/${name}
+    xinstall ${worksrcpath}/sounddecompress.py ${destroot}${prefix}/libexec/${name}
 #    xinstall ${worksrcpath}/wxSoundDecompress.py ${destroot}${prefix}/bin
     set docdir ${destroot}${prefix}/share/doc/${name}
     xinstall -d ${docdir}
