PlasmaClient: add description
git-svn-id: https://svn.macports.org/repository/macports/trunk@71446 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/PlasmaClient/Portfile
+++ b/dports/games/PlasmaClient/Portfile
@@ -12,6 +12,14 @@ maintainers                 ryandesign
 license                     GPL-3+
 homepage                    http://plasmaclient.servegame.org/
 
+description                 open-source Plasma engine
+
+long_description            ${name} is an open-source cross-platform \
+                            re-implementation of the Plasma engine, \
+                            originally created by HeadSpin Technologies and \
+                            Cyan Worlds. The Plasma engine powers Myst \
+                            Online: URU Live again.
+
 fetch.type                  hg
 hg.url                      http://uru.zrax.net/hg/plasmaclient
 hg.tag                      1924af79d98c
