libhsplasma: don't include debugging info unless debug variant is chosen
git-svn-id: https://svn.macports.org/repository/macports/trunk@71448 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libhsplasma/Portfile
+++ b/dports/devel/libhsplasma/Portfile
@@ -5,6 +5,7 @@ PortSystem                  1.0
 
 name                        libhsplasma
 version                     0.0-659
+revision                    1
 categories                  devel
 platforms                   darwin
 maintainers                 ryandesign
@@ -33,7 +34,8 @@ patchfiles                  patch-cp-parents
 
 universal_variant           no
 
-configure.args              --with-pkgconfig \
+configure.args              --no-debug \
+                            --with-pkgconfig \
                             --with-python=${prefix}/Library/Frameworks/Python.framework/Versions/2.6 \
                             --with-zlib=${prefix} \
                             --with-jpeg=${prefix} \
@@ -56,7 +58,7 @@ post-destroot {
 }
 
 variant debug description {Build with debugging symbols} {
-    configure.cflags-append -g
+    configure.args-delete   --no-debug
 }
 
 livecheck.type              regex
