libhsplasma: fix configuration on Tiger by using MacPorts bash which is newer than Tiger's bash
git-svn-id: https://svn.macports.org/repository/macports/trunk@71449 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libhsplasma/Portfile
+++ b/dports/devel/libhsplasma/Portfile
@@ -61,6 +61,12 @@ variant debug description {Build with debugging symbols} {
     configure.args-delete   --no-debug
 }
 
+platform darwin 8 {
+    # configure script requires bash 3 but Tiger has bash 2
+    depends_build-append    port:bash
+    configure.cmd           ${prefix}/bin/bash ./configure
+}
+
 livecheck.type              regex
 livecheck.url               ${hg.url}
 livecheck.version           [lindex [split ${version} -] 1]
